@@ -104,6 +104,14 @@
 
 /****************************************************************************/
 
+/* CPU cache line size; used for alignment purposes with some data structures.
+   This should be determined dynamically rather than preset here. For the
+   68040/68060 the cache line size is 16 bytes, for the PowerPC G4 it's
+   32 bytes and 128 bytes (gross!) for the PowerPC G5. */
+#define CACHE_LINE_SIZE 32UL
+
+/****************************************************************************/
+
 /* The directory entry type a socket is identified with (in a FileInfoBlock). */
 #define ST_SOCKET (31082002)
 
